show/hide image on click

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,10 @@
   </style>
 </head>
 <body>
-  <img src="./cat.png" alt="Cat Image">
+  <button id="mybutton">show/hide</button>
+  <div id="cat">
+    <img src="./cat.png" alt="Cat Image">
+  </div>
+  <script src="popup.js"></script>
 </body>
 </html>
