working version? Right before hackathon

--- a/popup.html
+++ b/popup.html
@@ -92,7 +92,7 @@
       align-items: center;
       justify-content: center;
       color: #fff;
-      background-color: red; /* Default to red X */
+      background-color: red;
     }
 	.achievement_text {
 		font-size: 15px;
@@ -114,6 +114,11 @@
       border: 1px solid #ccc;
       padding: 10px;
       margin-bottom: 10px;
+    }
+
+	#updates {
+        margin-left: 20px;
+        margin-top: 70px;
     }
   </style>
 </head>
@@ -252,11 +257,11 @@
 					<h2>Accessory</h2>
 					<div class="accessory">
 						<img src="./image/access1.png" width="60%" height="auto">
-						<button class="price-button" data-item="access1" data-price="20">Points: 70</button>
+						<button class="price-button" data-item="access1" data-price="70">Points: 70</button>
 						<img src="./image/access2.png" width="50%" height="auto">
-						<button class="price-button" data-item="access2" data-price="20">Points: 150</button>
+						<button class="price-button" data-item="access2" data-price="150">Points: 150</button>
 						<img src="./image/access3.png" width="60%" height="auto">
-						<button class="price-button" data-item="access3" data-price="20">Points: 220</button>
+						<button class="price-button" data-item="access3" data-price="220">Points: 220</button>
 					</div>
 					
 				</div>
